--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zustart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/pwozniak1986/zustart",
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-system__css": "^5.0.16"
+    "@types/styled-system__css": "^5.0.16",
+    "gh-pages": "^3.2.3"
   }
 }
